# mycase

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: manage.py
src/app/: auth.py  serilaizers.py
src/discord/: bot.py  oauth2.py  urls.py  views.py
src/main/: __init__.py  admin.py  asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
src/user/: models.py  serilaizers.py  urls.py  views.py
src/user/migrations/: 0001_initial.py
src/views/: confirm.py
user/: serilaizers.py  views.py
